<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/relativelayout_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="4dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp">

    <TextView
        android:id="@+id/textview_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="titulo"
        android:textSize="28sp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/textview_enrolled_users"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_title"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/small_text_size"
        android:visibility="gone"
        android:layout_alignRight="@id/textview_title"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/textview_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="@dimen/normal_text_size"
        android:layout_below="@id/textview_title"
        android:text="Couldn't resolve resource id textviewdescription 2 similar errors not shown."/>

    <LinearLayout
        android:id="@+id/linearlayout_infobar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_description"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_location"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="@dimen/small_text_size"
            android:text="@string/event_location"/>

        <TextView
            android:id="@+id/textview_date"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/small_text_size"
            android:text="@string/event_location"/>

        <TextView
            android:id="@+id/textview_time"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/event_time"
            android:textSize="@dimen/small_text_size"/>

    </LinearLayout>

    <TextView
        android:id="@+id/schedule_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayout_infobar"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:text="@string/schedule"/>

    <LinearLayout
        android:id="@+id/linearlayout_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/schedule_label"
        android:layout_marginTop="8dp"
        android:orientation="vertical">
    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="0dp"
        android:layout_below="@id/linearlayout_schedule"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/white"
        />

</RelativeLayout>